fix tailwind error

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -66,3 +66,13 @@
   -webkit-text-fill-color: transparent;
   background-clip: text;
 }
+
+.reset-textarea {
+  border: none !important;
+  outline: none !important;
+  -webkit-box-shadow: none !important;
+  -moz-box-shadow: none !important;
+  box-shadow: none !important;
+  border-radius: 0 !important;
+  padding: 0;
+}
